INTERNAL-411-63 - Fix cart totals issue on mobile

--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
@@ -169,6 +169,10 @@ h3 {
   @apply sr-only;
 }
 
+.cart-main + .product-slider {
+  @apply max-md:mb-28;
+}
+
 @layer components {
   @import "components/content-wrapper";
   @import "components/checkbox";
